--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "varan-boilerplate",
   "private": true,
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "scripts": {
     "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "build": "varan build",
@@ -70,6 +75,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "husky": "1.0.0-rc.13",
     "jest": "^23.4.0",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.3",
