--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "varan-boilerplate",
   "private": true,
   "license": "MIT",
+  "readmeFilename": "README.md",
+  "engines": {
+    "node": ">= 8.10.0",
+    "npm": ">= 5.6.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm test"
@@ -17,6 +22,7 @@
     "clean": "del-cli ./dist",
     "heroku-postbuild": "npm install --only=dev && npm run build && npm prune --production",
     "start": "node dist/server/bin/web.js",
+    "pretest": "npm run check",
     "test": "jest",
     "prewatch": "npm run clean",
     "watch": "varan watch -- --inspect"
@@ -80,14 +86,13 @@
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.0",
-    "react-test-renderer": "^16.4.0",
     "supertest": "^3.0.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.0-rc"
   },
   "jest": {
     "globals": {
