--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "engines": {
-    "node": ">= 8.10.0",
-    "npm": ">= 5.6.0"
+    "node": "^8.11.3",
+    "npm": "^5.6.0"
   },
   "husky": {
     "hooks": {
@@ -70,7 +70,6 @@
     "@types/react-redux": "^6.0.2",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
-    "@types/react-test-renderer": "^16.0.1",
     "@types/recompose": "^0.26.1",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
