--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "node": "^8.11.3",
     "npm": "^5.6.0"
   },
+  "browserslist": [
+    ">0.25%",
+    "not ie <11"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "npm test"
@@ -52,10 +56,10 @@
     "serialize-javascript": "^1.4.0",
     "source-map-support": "^0.5.6",
     "typesafe-actions": "^2.0.4",
-    "varan": "^0.5.0"
+    "varan": "^0.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-rc.1",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/enzyme": "^3.1.11",
@@ -63,7 +67,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.0.0",
     "@types/lodash": "^4.14.109",
-    "@types/node": "^8.10.19",
+    "@types/node": "^8.10.24",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet": "^5.0.6",
@@ -81,12 +85,12 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "husky": "1.0.0-rc.13",
-    "jest": "^23.4.0",
+    "jest": "^23.5.0",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.0",
     "supertest": "^3.0.0",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "23.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-config-prettier": "^1.10.0",
