--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^4.3.0",
     "core-js": "^2.5.7",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
@@ -62,6 +63,7 @@
     "@babel/core": "^7.0.0-rc.1",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
+    "@types/dotenv": "^4.0.3",
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
