--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "compression": "^1.7.3",
     "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^4.3.0",
     "core-js": "^2.5.7",
@@ -48,22 +49,23 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "recompose": "^0.28.0",
+    "recompose": "^0.29.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-observable": "^1.0.0-beta.1",
+    "redux-observable": "^1.0.0",
     "reduxsauce": "^1.0.0",
     "rxjs": "^6.2.1",
     "serialize-javascript": "^1.4.0",
     "source-map-support": "^0.5.6",
     "typesafe-actions": "^2.0.4",
-    "varan": "^0.6.1"
+    "varan": "^0.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
+    "@types/compression": "0.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
