--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "scripts": {
     "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "build": "varan build",
+    "build:new": "node ../../ersims/varan/dist/bin/cli.js build",
     "build:analyze": "varan build --analyze",
     "check:format": "prettier --config .prettierrc --list-different \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:linting": "tslint --project tsconfig.json \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
     "check": "npm-run-all check:*",
     "clean": "del-cli ./dist",
-    "heroku-postbuild": "npm install --only=dev && npm run build && npm prune --production",
+    "heroku-postbuild": "npm install --only=dev && npm run build:new && npm prune --production",
     "start": "node dist/server/bin/web.js",
     "pretest": "npm run check",
     "test": "jest",
@@ -37,6 +38,7 @@
     "watch": "varan watch -- --inspect"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "connect-gzip-static": "^2.1.1",
@@ -62,8 +64,7 @@
     "rxjs": "^6.2.1",
     "serialize-javascript": "^1.4.0",
     "source-map-support": "^0.5.6",
-    "typesafe-actions": "^2.0.4",
-    "varan": "^0.7.1"
+    "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -104,7 +105,8 @@
     "tslint-config-airbnb": "^5.8.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "varan": "^0.8.0"
   },
   "jest": {
     "globals": {
