fix: remove unnecessary scripts

--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
   "scripts": {
     "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "build": "varan build",
-    "build:new": "node ../../ersims/varan/dist/bin/cli.js build",
     "build:analyze": "varan build --analyze",
     "check:format": "prettier --config .prettierrc --list-different \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:linting": "tslint --project tsconfig.json \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
     "check": "npm-run-all check:*",
     "clean": "del-cli ./dist",
-    "heroku-postbuild": "npm install --only=dev && npm run build:new && npm prune --production",
+    "heroku-postbuild": "npm install --only=dev && npm run build && npm prune --production",
     "start": "node dist/server/bin/web.js",
     "pretest": "npm run check",
     "test": "jest",
