feat: update varan

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "npm": ">= 5.6.0"
   },
   "browserslist": [
-    ">0.25%",
-    "not ie <11"
+    ">1%",
+    "not dead",
+    "not ie < 11"
   ],
   "husky": {
     "hooks": {
@@ -66,7 +67,6 @@
     "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "0.0.36",
@@ -105,14 +105,9 @@
     "tslint-config-prettier": "^1.10.0",
     "tslint-eslint-rules": "^5.1.0",
     "typescript": "^3.0.1",
-    "varan": "^0.8.1"
+    "varan": "^0.9.0"
   },
   "jest": {
-    "globals": {
-      "ts-jest": {
-        "skipBabel": true
-      }
-    },
     "bail": true,
     "collectCoverage": true,
     "collectCoverageFrom": [
