--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   ],
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "npm test"
     }
   },
   "scripts": {
-    "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\"",
+    "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\" \"*.js\"",
     "build": "varan build",
     "build:analyze": "varan build --analyze",
-    "check:format": "prettier --config .prettierrc --list-different \"{src,test,types}/**/*.{ts,js}?(x)\"",
+    "check:format": "prettier --config .prettierrc --list-different \"{src,test,types}/**/*.{ts,js}?(x)\" \"*.js\"",
     "check:linting": "tslint --project tsconfig.json \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
     "check": "npm-run-all check:*",
@@ -34,8 +35,8 @@
     "start": "node dist/server/bin/web.js",
     "pretest": "npm run check",
     "test": "jest",
-    "prewatch": "npm run clean",
-    "watch": "varan watch -- --inspect"
+    "prestart:watch": "npm run clean",
+    "start:watch": "varan watch -- --inspect"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
@@ -43,7 +44,7 @@
     "compression": "^1.7.3",
     "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^6.0.0",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "history": "^4.7.2",
@@ -63,10 +64,12 @@
     "reduxsauce": "^1.0.0",
     "rxjs": "^6.2.1",
     "serialize-javascript": "^1.4.0",
-    "source-map-support": "^0.5.6",
+    "source-map-support": "^0.5.10",
     "typesafe-actions": "^3.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.3.1",
+    "@commitlint/config-conventional": "^7.3.1",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "0.0.36",
@@ -74,7 +77,7 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.0.0",
+    "@types/jest": "^23.3.12",
     "@types/lodash": "^4.14.109",
     "@types/node": "^8.10.24",
     "@types/react": "^16.3.17",
@@ -93,14 +96,14 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
-    "husky": "1.2.0",
+    "husky": "^1.3.1",
     "jest": "^23.5.0",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.13.0",
     "supertest": "^3.0.0",
     "ts-jest": "23.10.5",
-    "tslint": "^5.10.0",
+    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-eslint-rules": "^5.1.0",
