feat: update varan to v0.11.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": false,
     "resolveJsonModule": true,
-    "outDir": "dist",
-    "rootDir": "src"
+    "outDir": "dist"
   },
   "include": [
     "types",
