--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "apply:format": "prettier --config .prettierrc --write \"{src,test,types}/**/*.{ts,js}?(x)\" \"*.js\"",
-    "build": "varan build",
-    "build:analyze": "varan build --analyze",
+    "build": "varan build ./webpack/client varan/webpack/server",
+    "build:analyze": "varan build ./webpack/client varan/webpack/server --analyze",
     "check:format": "prettier --config .prettierrc --list-different \"{src,test,types}/**/*.{ts,js}?(x)\" \"*.js\"",
     "check:linting": "tslint --project tsconfig.json \"{src,test,types}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
@@ -35,8 +35,9 @@
     "start": "node dist/server/bin/web.js",
     "pretest": "npm run check",
     "test": "jest",
+    "test:watch": "jest --watch",
     "prestart:watch": "npm run clean",
-    "start:watch": "varan watch -- --inspect"
+    "start:watch": "varan watch ./webpack/client varan/webpack/server -- --inspect"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
@@ -44,18 +45,19 @@
     "compression": "^1.7.3",
     "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^6.0.0",
-    "core-js": "^2.6.2",
-    "dotenv": "^6.0.0",
+    "core-js": "^3.0.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.2",
-    "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-hot-loader": "^4.8.0",
+    "react-redux": "^7.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-waypoint": "^9.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
@@ -65,7 +67,7 @@
     "rxjs": "^6.2.1",
     "serialize-javascript": "^1.4.0",
     "source-map-support": "^0.5.10",
-    "typesafe-actions": "^3.0.0"
+    "typesafe-actions": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.3.1",
@@ -77,38 +79,38 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.109",
-    "@types/node": "^8.10.24",
-    "@types/react": "^16.3.17",
+    "@types/jest": "^24.0.9",
+    "@types/lodash": "^4.14.122",
+    "@types/node": "^11.13.2",
+    "@types/react": "^16.8.7",
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet": "^5.0.6",
-    "@types/react-redux": "^7.0.0",
+    "@types/react-redux": "^7.0.2",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
-    "@types/recompose": "^0.30.0",
+    "@types/recompose": "^0.30.5",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
-    "@types/webpack-env": "^1.13.6",
+    "@types/webpack-env": "^1.13.8",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.0.0",
     "del-cli": "^1.1.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.4",
     "husky": "^1.3.1",
     "jest": "^24.0.0",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.13.0",
-    "supertest": "^3.0.0",
-    "ts-jest": "24.0.0",
-    "tslint": "^5.12.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.13.1",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^3.2.2",
-    "varan": "^0.9.0"
+    "typescript": "^3.4.3",
+    "varan": "^0.11.0"
   },
   "jest": {
     "bail": true,
@@ -138,7 +140,9 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|ico)$": "<rootDir>/test/__mocks__/fileMock.ts",
       "\\.(css|sass|scss|less)$": "<rootDir>/test/__mocks__/styleMock.js"
     },
-    "setupTestFrameworkScriptFile": "<rootDir>/test/fixtures/setupTests.ts",
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/fixtures/setupTests.ts"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
