--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,5 @@
     "resolveJsonModule": true,
     "outDir": "dist"
   },
-  "include": [
-    "types",
-    "src"
-  ]
+  "include": ["types", "src"]
 }
