--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "varan build ./webpack/client varan/webpack/server",
     "build:analyze": "varan build ./webpack/client varan/webpack/server --analyze",
     "check:format": "prettier --list-different \"**/*.{css,less,sass,scss,html,md,graphql,gql,json,ts,tsx,js,jsx,yml,yaml}\"",
-    "check:linting": "tslint --project tsconfig.json \"**/*.{ts,js}?(x)\"",
+    "check:linting": "eslint --cache --cache-location node_modules/.cache/.eslintcache \"*.{ts,js}?(x)\" \"{src,test,types,webpack}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
     "check": "npm-run-all check:*",
     "clean": "del-cli ./dist",
@@ -45,7 +45,7 @@
     "compression": "^1.7.3",
     "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^6.4.0",
-    "core-js": "^3.1.2",
+    "core-js": "^3.1.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "history": "^4.7.2",
@@ -81,8 +81,8 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.9",
     "@types/lodash": "^4.14.122",
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.7",
+    "@types/node": "^12.0.3",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet": "^5.0.6",
     "@types/react-redux": "^7.0.2",
@@ -92,12 +92,21 @@
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
     "@types/webpack-env": "^1.13.8",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "del-cli": "^1.1.0",
+    "del-cli": "^2.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.13.1",
+    "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "normalize.css": "^8.0.0",
@@ -105,11 +114,7 @@
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
-    "tslint-config-airbnb": "^5.8.0",
-    "tslint-config-prettier": "^1.10.0",
-    "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^3.4.5",
+    "typescript": "^3.5.1",
     "varan": "^0.12.0"
   },
   "jest": {
