--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@commitlint/config-conventional": "^8.0.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
-    "@types/compression": "0.0.36",
+    "@types/compression": "^1.0.0",
     "@types/dotenv": "^6.0.0",
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
@@ -92,16 +92,16 @@
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
     "@types/webpack-env": "^1.13.8",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "del-cli": "^2.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jest": "^22.6.4",
@@ -115,7 +115,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.1",
-    "varan": "^0.12.0"
+    "varan": "^0.13.2"
   },
   "jest": {
     "bail": true,
