--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm test"
+      "pre-commit": "lint-staged && npm test"
     }
   },
   "lint-staged": {
@@ -60,8 +60,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet-async": "^1.0.2",
-    "react-hot-loader": "^4.8.0",
-    "react-redux": "^7.0.3",
+    "react-hot-loader": "^4.12.12",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-waypoint": "^9.0.1",
@@ -71,7 +71,7 @@
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.5.2",
-    "serialize-javascript": "^1.7.0",
+    "serialize-javascript": "^2.1.0",
     "source-map-support": "^0.5.10",
     "typesafe-actions": "^4.4.2"
   },
@@ -86,8 +86,8 @@
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.9",
-    "@types/lodash": "^4.14.122",
-    "@types/node": "^12.0.3",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "^12.7.3",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet-async": "^1.0.0",
@@ -102,27 +102,27 @@
     "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "del-cli": "^2.0.0",
+    "del-cli": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jest": "^22.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "husky": "^3.0.0",
     "jest": "^24.8.0",
-    "lint-staged": "^9.2.3",
+    "lint-staged": "^9.2.5",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1",
-    "varan": "^0.13.3"
+    "typescript": "^3.6.2",
+    "varan": "^0.14.0"
   },
   "jest": {
     "bail": true,
