--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "@babel/runtime": "^7.0.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
-    "connect-gzip-static": "^2.1.1",
     "connected-react-router": "^6.4.0",
     "core-js": "^3.1.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-static-gzip": "^2.0.5",
     "history": "^4.7.2",
     "immer": "^3.2.0",
     "lodash": "^4.17.10",
