--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "express": "^4.17.0",
     "express-static-gzip": "^2.0.5",
     "history": "^4.7.2",
-    "immer": "^3.2.0",
+    "immer": "^4.0.1",
     "lodash": "^4.17.10",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.2",
     "react-hot-loader": "^4.12.12",
     "react-redux": "^7.1.1",
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
+    "@hot-loader/react-dom": "^16.9.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
@@ -91,9 +92,10 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet-async": "^1.0.0",
+    "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^7.0.2",
     "@types/react-router": "^5.0.1",
-    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-dom": "^5.1.0",
     "@types/recompose": "^0.30.6",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
@@ -121,8 +123,8 @@
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2",
-    "varan": "^0.14.0"
+    "typescript": "^3.7.0-beta",
+    "varan": "^0.15.1"
   },
   "jest": {
     "bail": true,
