--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,10 @@ x-save-cache: &save-cache
     paths:
       - node_modules
     key: v1-dependencies-{{ arch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
+x-build: &build
+  run: npm run build
 x-run-tests: &run-tests
-  run: npm test
+  run: npm test -- --runInBand
 x-coverage: &coverage
   run:
     name: Upload Coverage
@@ -32,6 +34,7 @@ jobs:
       - *version-check
       - *install-dependencies
       - *save-cache
+      - *build
       - *run-tests
       - *coverage
 
@@ -45,6 +48,7 @@ jobs:
       - *version-check
       - *install-dependencies
       - *save-cache
+      - *build
       - *run-tests
       - *coverage
 
@@ -58,6 +62,21 @@ jobs:
       - *version-check
       - *install-dependencies
       - *save-cache
+      - *build
+      - *run-tests
+      - *coverage
+
+  test-node13:
+    docker:
+      - image: circleci/node:13
+    working_directory: ~/repo
+    steps:
+      - *checkout
+      - *restore-cache
+      - *version-check
+      - *install-dependencies
+      - *save-cache
+      - *build
       - *run-tests
       - *coverage
 
@@ -68,3 +87,4 @@ workflows:
       - test-node8
       - test-node10
       - test-node12
+      - test-node13
