--- a/package.json
+++ b/package.json
@@ -40,27 +40,27 @@
     "heroku-postbuild": "npm install --only=dev && npm run build && npm prune --production",
     "start": "node dist/server/bin/web.js",
     "prestart:watch": "npm run clean",
-    "start:watch": "varan watch ./webpack/client varan/webpack/server -- --inspect",
+    "start:watch": "varan watch -- --inspect",
     "pretest": "npm run check",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.6.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "connected-react-router": "^6.4.0",
-    "core-js": "^3.1.3",
-    "dotenv": "^8.0.0",
+    "core-js": "^3.3.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-static-gzip": "^2.0.5",
     "history": "^4.7.2",
-    "immer": "^4.0.1",
+    "immer": "^5.0.0",
     "lodash": "^4.17.10",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet-async": "^1.0.2",
-    "react-hot-loader": "^4.12.12",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet-async": "^1.0.4",
+    "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
@@ -78,53 +78,53 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
-    "@hot-loader/react-dom": "^16.9.0",
+    "@hot-loader/react-dom": "^16.10.2",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
-    "@types/dotenv": "^6.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
-    "@types/jest": "^24.0.9",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.3",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-helmet-async": "^1.0.0",
+    "@types/jest": "^24.0.20",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-helmet-async": "^1.0.1",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^7.0.2",
-    "@types/react-router": "^5.0.1",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/recompose": "^0.30.6",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
-    "@types/webpack-env": "^1.13.8",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@types/webpack-env": "^1.14.1",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "del-cli": "^3.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.13.2",
-    "enzyme-to-json": "^3.3.4",
-    "eslint": "^6.3.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.16.0",
+    "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "husky": "^3.0.0",
+    "husky": "^3.0.9",
     "jest": "^24.8.0",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.4.2",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.7.0-beta",
-    "varan": "^0.15.1"
+    "typescript": "^3.7.1-rc",
+    "varan": "^0.15.2"
   },
   "jest": {
     "bail": true,
