--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "scripts": {
     "apply:format": "prettier --write \"**/*.{css,less,sass,scss,html,md,graphql,gql,json,ts,tsx,js,jsx,yml,yaml}\"",
-    "build": "varan build ./webpack/client varan/webpack/server",
-    "build:analyze": "varan build ./webpack/client varan/webpack/server --analyze",
+    "build": "varan build",
+    "build:analyze": "varan build --analyze",
     "check:format": "prettier --list-different \"**/*.{css,less,sass,scss,html,md,graphql,gql,json,ts,tsx,js,jsx,yml,yaml}\"",
     "check:linting": "eslint --cache --cache-location node_modules/.cache/.eslintcache \"*.{ts,js}?(x)\" \"{src,test,types,webpack}/**/*.{ts,js}?(x)\"",
     "check:types": "tsc --noEmit",
@@ -49,7 +49,7 @@
     "@babel/runtime": "^7.6.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
-    "connected-react-router": "^6.4.0",
+    "connected-react-router": "6.5.2",
     "core-js": "^3.3.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
@@ -57,10 +57,11 @@
     "history": "^4.7.2",
     "immer": "^5.0.0",
     "lodash": "^4.17.10",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "normalize.css": "^8.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
-    "react-hot-loader": "^4.12.15",
+    "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
@@ -79,6 +80,8 @@
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@hot-loader/react-dom": "^16.10.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
@@ -87,11 +90,11 @@
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.20",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "^12.11.7",
+    "@types/lodash": "^4.14.148",
+    "@types/node": "^12.12.8",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "@types/react-helmet-async": "^1.0.1",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
@@ -105,68 +108,68 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "del-cli": "^3.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^23.0.3",
+    "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "husky": "^3.0.9",
     "jest": "^24.8.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^9.4.2",
-    "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.7.1-rc",
-    "varan": "^0.15.2"
+    "varan": "^0.16.2"
   },
   "jest": {
-    "bail": true,
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{ts,js}?(x)",
-      "*.js"
+      "src/**/*.{ts,js}?(x)"
     ],
     "coverageDirectory": ".coverage",
     "coverageThreshold": {
       "global": {
         "branches": 0,
         "functions": 0,
-        "lines": 10,
-        "statements": 5
+        "lines": 0,
+        "statements": 0
       }
     },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
+    "projects": [
+      {
+        "displayName": "client",
+        "testEnvironment": "jsdom",
+        "testMatch": [
+          "<rootDir>/src/client/**/*.test.{ts,js}?(x)"
+        ],
+        "setupFilesAfterEnv": [
+          "<rootDir>/test/setupTests.ts"
+        ],
+        "transform": {
+          "^.+\\.(j|t)sx?$": "ts-jest",
+          ".+\\.(styl|css|sass|scss|less|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|ico|webmanifest|xml)$": "jest-transform-stub"
+        }
+      },
+      {
+        "displayName": "server",
+        "testEnvironment": "node",
+        "testMatch": [
+          "<rootDir>/src/server"
+        ],
+        "setupFilesAfterEnv": [
+          "<rootDir>/test/setupTests.ts"
+        ],
+        "transform": {
+          "^.+\\.(j|t)sx?$": "ts-jest",
+          ".+\\.(styl|css|sass|scss|less|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|ico|webmanifest|xml)$": "jest-transform-stub"
+        }
+      }
     ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|ico)$": "<rootDir>/test/__mocks__/fileMock.ts",
-      "\\.(css|sass|scss|less)$": "<rootDir>/test/__mocks__/styleMock.js"
-    },
-    "setupFilesAfterEnv": [
-      "<rootDir>/test/fixtures/setupTests.ts"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "testEnvironment": "node",
-    "testMatch": [
-      "<rootDir>/test/__tests__/**/*.{ts,js}?(x)"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
     "silent": true,
     "verbose": true
   }
