--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "check:types": "tsc --noEmit",
     "check": "npm-run-all check:*",
     "clean": "del-cli ./dist",
-    "heroku-postbuild": "npm install --only=dev && npm run build && npm prune --production",
     "start": "node dist/server/bin/web.js",
     "prestart:watch": "npm run clean",
     "start:watch": "varan watch -- --inspect",
@@ -85,7 +84,6 @@
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
-    "@types/dotenv": "^8.2.0",
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
@@ -95,7 +93,6 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-helmet": "^5.0.14",
-    "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
@@ -123,8 +120,8 @@
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.7.1-rc",
-    "varan": "^0.16.2"
+    "typescript": "^3.7.2",
+    "varan": "^0.16.3"
   },
   "jest": {
     "collectCoverage": true,
