--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-transition-group": "^4.3.0",
     "react-waypoint": "^9.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
@@ -84,8 +85,6 @@
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
-    "@types/enzyme": "^3.1.11",
-    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.20",
     "@types/lodash": "^4.14.148",
@@ -96,6 +95,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-transition-group": "^4.2.3",
     "@types/recompose": "^0.30.6",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
