--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@babel/runtime": "^7.7.4",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
-    "connected-react-router": "6.5.2",
-    "core-js": "^3.3.4",
+    "connected-react-router": "^6.6.1",
+    "core-js": "^3.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-static-gzip": "^2.0.5",
@@ -88,34 +88,34 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.20",
     "@types/lodash": "^4.14.148",
-    "@types/node": "^12.12.12",
-    "@types/react": "^16.9.12",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.3",
     "@types/react-helmet": "^5.0.14",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.3",
     "@types/recompose": "^0.30.6",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "del-cli": "^3.0.0",
-    "eslint": "^6.7.0",
+    "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^23.0.4",
+    "eslint-plugin-jest": "^23.0.5",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "husky": "^3.0.9",
     "jest": "^24.8.0",
     "jest-transform-stub": "^2.0.0",
-    "lint-staged": "^9.4.2",
+    "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
     "supertest": "^4.0.2",
