--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prestart:watch": "npm run clean",
     "start:watch": "varan watch -- --inspect",
     "pretest": "npm run check",
-    "test": "jest",
+    "test": "jest --no-cache",
     "test:watch": "jest --watch"
   },
   "dependencies": {
@@ -55,7 +55,7 @@
     "express-static-gzip": "^2.0.5",
     "history": "^4.7.2",
     "immer": "^5.0.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "normalize.css": "^8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -66,15 +66,16 @@
     "react-router-dom": "^5.0.0",
     "react-transition-group": "^4.3.0",
     "react-waypoint": "^9.0.1",
-    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
+    "reselect": "^4.0.0",
     "rxjs": "^6.5.2",
     "serialize-javascript": "^2.1.0",
     "source-map-support": "^0.5.10",
-    "typesafe-actions": "^4.4.2"
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
@@ -87,7 +88,7 @@
     "@types/compression": "^1.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.20",
-    "@types/lodash": "^4.14.148",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.3",
@@ -96,7 +97,7 @@
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.3",
-    "@types/recompose": "^0.30.6",
+    "@types/redux-immutable-state-invariant": "^2.1.1",
     "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
     "@types/webpack-env": "^1.14.1",
@@ -105,11 +106,11 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "del-cli": "^3.0.0",
-    "eslint": "^6.7.1",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^23.0.5",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.17.0",
     "husky": "^3.0.9",
