--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-static-gzip": "^2.0.5",
+    "focus-visible": "^5.0.2",
     "history": "^4.7.2",
     "immer": "^5.0.0",
     "lodash": "^4.17.15",
