feat: modernize boilerplate

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "browserslist": [
     ">1%",
     "not dead",
-    "not ie < 11"
+    "not IE > 0"
   ],
   "husky": {
     "hooks": {
@@ -24,8 +24,7 @@
   },
   "lint-staged": {
     "*.{css,less,sass,scss,html,md,graphql,gql,json,ts,tsx,js,jsx,yml,yaml}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "scripts": {
@@ -41,40 +40,30 @@
     "prestart:watch": "npm run clean",
     "start:watch": "varan watch -- --inspect",
     "pretest": "npm run check",
-    "test": "jest --no-cache",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.4",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
-    "connected-react-router": "^6.6.1",
     "core-js": "^3.4.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-static-gzip": "^2.0.5",
     "focus-visible": "^5.0.2",
-    "history": "^4.7.2",
-    "immer": "^5.0.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
     "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-transition-group": "^4.3.0",
     "react-waypoint": "^9.0.1",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "redux-logger": "^3.0.6",
-    "redux-observable": "^1.0.0",
-    "reselect": "^4.0.0",
-    "rxjs": "^6.5.2",
-    "serialize-javascript": "^2.1.0",
+    "serialize-javascript": "^4.0.0",
     "source-map-support": "^0.5.10",
     "typesafe-actions": "^5.1.0"
   },
@@ -82,32 +71,30 @@
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@hot-loader/react-dom": "^16.10.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.0",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.3.0",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
     "@types/express": "^4.16.0",
-    "@types/jest": "^25.0.0",
+    "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.14",
     "@types/react-dom": "^16.9.3",
-    "@types/react-helmet": "^5.0.14",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.3",
-    "@types/redux-immutable-state-invariant": "^2.1.1",
-    "@types/redux-logger": "^3.0.6",
     "@types/serialize-javascript": "^1.3.2",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^25.0.0",
+    "babel-jest": "^26.0.1",
     "del-cli": "^3.0.0",
-    "eslint": "^6.7.2",
+    "eslint": "7.2.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-import": "^2.17.3",
@@ -115,30 +102,33 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.17.0",
     "husky": "^4.0.0",
-    "jest": "^25.0.0",
+    "jest": "^26.0.1",
     "jest-transform-stub": "^2.0.0",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.1",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.0.0",
     "typescript": "^3.7.2",
-    "varan": "^0.16.3"
+    "varan": "^0.17.1"
   },
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{ts,js}?(x)"
+      "src/**/!(__tests__)/!(*.test).{ts,js}?(x)"
     ],
     "coverageDirectory": ".coverage",
     "coverageThreshold": {
       "global": {
-        "branches": 0,
-        "functions": 0,
-        "lines": 0,
-        "statements": 0
+        "branches": 20,
+        "functions": 50,
+        "lines": 35,
+        "statements": 35
       }
     },
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
     "projects": [
       {
         "displayName": "client",
@@ -147,13 +137,14 @@
         },
         "testEnvironment": "jsdom",
         "testMatch": [
-          "<rootDir>/src/client/**/*.test.{ts,js}?(x)"
+          "<rootDir>/src/client/**/*.test.{ts,js}?(x)",
+          "<rootDir>/src/client/**/__tests__/*.{ts,js}?(x)"
         ],
         "setupFilesAfterEnv": [
           "<rootDir>/test/setupTests.ts"
         ],
         "transform": {
-          "^.+\\.(j|t)sx?$": "ts-jest",
+          "^.+\\.(j|t)sx?$": "babel-jest",
           "^.+\\.(styl|css|sass|scss|less|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|vtt|wav|mp3|m4a|aac|oga|ico|webmanifest|xml)$": "jest-transform-stub"
         }
       },
@@ -164,13 +155,14 @@
         },
         "testEnvironment": "node",
         "testMatch": [
-          "<rootDir>/src/server"
+          "<rootDir>/src/server/**/*.test.{ts,js}?(x)",
+          "<rootDir>/src/server/**/__tests__/*.{ts,js}?(x)"
         ],
         "setupFilesAfterEnv": [
           "<rootDir>/test/setupTests.ts"
         ],
         "transform": {
-          "^.+\\.(j|t)sx?$": "ts-jest",
+          "^.+\\.(j|t)sx?$": "babel-jest",
           "^.+\\.(styl|css|sass|scss|less|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|vtt|wav|mp3|m4a|aac|oga|ico|webmanifest|xml)$": "jest-transform-stub"
         }
       }
