--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-testing-library": "^3.3.1",
     "husky": "^4.0.0",
     "jest": "^26.0.1",
     "jest-transform-stub": "^2.0.0",
